# agents

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC_V0.md  TODO.md  biome.jsonc  cargo  commitlint.config.cjs  evals.toml  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.build.json  vite.config.ts
.cargo/: config.toml
crates.old/borg-fs/: Cargo.toml
crates.old/borg-fs/src/: lib.rs
crates.old/borg-gql/: Cargo.toml  IMPLEMENTATION_NOTES.md  build.rs  schema.graphql
crates.old/borg-gql/src/: scalars.rs
crates.old/borg-gql/src/sdl/: mod.rs
crates.old/borg-gql/tests/: stage_e2e.rs
crates.old/borg-ports-tools/: Cargo.toml
crates.old/borg-ports-tools/src/: lib.rs
crates/agents/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/agents-codemode/: Cargo.toml
crates/agents-codemode/src/: engine.rs  error.rs  host.rs  lib.rs  module_loader.rs  native.rs  providers.rs  tests.rs
crates/agents-codemode/tests/: engine_e2e.rs
crates/agents-proc-macros/: Cargo.toml  README.md
crates/agents-proc-macros/src/agent/: mod.rs
crates/agents-test/: Cargo.toml  README.md
crates/agents-test/src/: lib.rs  ollama_container.rs
crates/agents/src/: lib.rs
crates/agents/src/agent/: context.rs  error.rs  mod.rs  storage.rs  tools.rs
crates/agents/src/llm/: completion.rs  error.rs  mod.rs  response.rs  runner.rs  tools.rs  tools_derive.rs  transcription.rs
crates/agents/swift/: Package.swift
crates/agents/tests/: agent_e2e_anthropic.rs  agent_e2e_ollama.rs  agent_e2e_openai.rs  agent_e2e_openrouter.rs  llm_e2e_anthropic.rs  llm_e2e_apple.rs  llm_e2e_ollama.rs  llm_e2e_openai.rs  llm_e2e_openrouter.rs  llm_e2e_workers_ai.rs
crates/agents/tests/common/: mod.rs
crates/borg-agent/: AGENTS.md  Cargo.toml  README.md
crates/borg-agent/src/: actor_thread.rs  admin_tools.rs  agent.rs  context.rs  error.rs  lib.rs  llm_adapter.rs  message.rs  session.rs  storage.rs  tests.rs  tools.rs
crates/borg-agent/src/agent/: mod.rs  session.rs
crates/borg-agent/tests/: agentic_loop_with_real_llm.rs  e2e_anthropic.rs  e2e_ollama.rs  e2e_openai.rs  e2e_openrouter.rs
crates/borg-api/: Cargo.toml  build.rs
crates/borg-api/src/: dashboard.rs  lib.rs
crates/borg-api/src/controllers/: actors.rs  apps.rs  behaviors.rs  common.rs  dashboard.rs  db.rs  devmode.rs  fs.rs  mod.rs  port_actor_bindings.rs  providers.rs  routes.rs  system.rs
crates/borg-apps/: Cargo.toml
crates/borg-apps/src/: catalog.rs  discovery.rs  lib.rs  oauth.rs
crates/borg-cli/: Cargo.toml
crates/borg-cli/src/: app.rs  main.rs
crates/borg-cli/src/cmd/: clockwork.rs  infer.rs  llm.rs  mod.rs  models.rs  ports.rs  providers.rs  schedule.rs
crates/borg-codemode/: Cargo.toml
crates/borg-codemode/src/: engine.rs  ffi.rs  lib.rs  module_loader.rs  ops.rs  sdk.rs  tests.rs  tools.rs
crates/borg-codemode/src/cli/: mod.rs
crates/borg-evals/: AGENTS.md  Cargo.toml  README.md
crates/borg-evals-core/: Cargo.toml
crates/borg-evals-core/examples/: calculator_agent.rs  calendar_rescheduler.rs  current_date_tool_baseline.rs
crates/borg-evals-core/src/: case.rs  config.rs  error.rs  eval.rs  grade.rs  lib.rs  registry.rs  report.rs  suite.rs  trajectory.rs  trial.rs
crates/borg-evals/examples/: calculator_agent.rs
crates/borg-evals/src/: config.rs  error.rs  eval.rs  events.rs  grade.rs  judge.rs  lib.rs  registry.rs  report.rs  suite.rs  trajectory.rs  trial.rs
crates/borg-evals/src/runner/: config.rs  discovery.rs  harness.rs  mod.rs
crates/borg-exec/: Cargo.toml
crates/borg-exec/src/: actor.rs  actor_context_manager.rs  actor_manager.rs  admin_tools.rs  executor.rs  lib.rs  llm_resolver.rs  mailbox.rs  mailbox_envelope.rs  message.rs  patch_apply.rs  port_context.rs  provider_config.rs  provider_supervisor.rs  runtime.rs  session_manager.rs  supervisor.rs  task_queue.rs  tests.rs  tool_contract.rs  tool_runner.rs  types.rs
crates/borg-gql/: Cargo.toml  IMPLEMENTATION_NOTES.md  SCHEMA_USAGE.md  build.rs  schema.graphql
crates/borg-gql/src/: context.rs  lib.rs  scalars.rs  tests.rs
crates/borg-gql/tests/: stage_e2e.rs
crates/borg-infer/: Cargo.toml
crates/borg-infer/src/: lib.rs  llama_cpp.rs  llama_cpp_tests.rs  types.rs
crates/borg-llm/: AGENTS.md  Cargo.toml  README.md
crates/borg-llm/src/: capability.rs  completion.rs  error.rs  huggingface.rs  lib.rs  model.rs  orchestrator.rs  response.rs  runner.rs  tools.rs  transcription.rs  types.rs
crates/borg-llm/swift/: Package.swift
crates/borg-llm/tests/: e2e_anthropic.rs  e2e_apple.rs  e2e_ollama.rs  e2e_openai.rs  e2e_openrouter.rs  openai_compat_container.rs
crates/borg-ltm/: Cargo.toml
crates/borg-ltm/src/: lib.rs  tools.rs
crates/borg-macos/: Cargo.toml
crates/borg-macos/examples/: mic_capture_spike.rs
crates/borg-macos/src/: engine.rs  lib.rs  tests.rs  tools.rs  types.rs
crates/borg-macros/: Cargo.toml  README.md
crates/borg-macros/src/: lib.rs
crates/borg-memory/: Cargo.toml
crates/borg-memory/src/: lib.rs  tools.rs
crates/borg-memory/tests/: rfd0005_property_suite.proptest-regressions  rfd0005_property_suite.rs  rfd0005_test_suite.rs
crates/borg-ports/: Cargo.toml
crates/borg-ports/src/: lib.rs  message.rs  output_format.rs  port.rs  supervisor.rs  tools.rs
crates/borg-rt/: Cargo.toml  build.rs
crates/borg-rt/src/: checker.rs  engine.rs  ffi.rs  lib.rs  sdk.rs  tests.rs  tools.rs  types.rs
crates/borg-shellmode/: Cargo.toml
crates/borg-shellmode/src/: engine.rs  lib.rs  tests.rs  tools.rs
crates/borg-taskgraph/: Cargo.toml
crates/borg-taskgraph/src/: lib.rs  model.rs  store.rs  supervisor.rs  tests.rs  tools.rs
crates/cargo-evals/: Cargo.toml  README.md
crates/cargo-evals/src/: cli.rs  config.rs  discovery.rs  harness.rs  main.rs
crates/codemode/: Cargo.toml  README.md
crates/codemode/src/: config.rs  engine.rs  error.rs  host.rs  lib.rs  native.rs  request.rs  tests.rs
crates/codemode/tests/: engine_e2e.rs
crates/evals-macros/: Cargo.toml  README.md
crates/evals-macros/src/: lib.rs
(+557 files in other folders)
