[workspace]
members = [
  "crates/borg-agent",
  "crates/borg-api",
  "crates/borg-apps",
  "crates/borg-cli",
  "crates/borg-clockwork",
  "crates/borg-gql",
  "crates/borg-cmd",
  "crates/borg-taskgraph",
  "crates/borg-core",
  "crates/borg-db",
  "crates/borg-exec",
  "crates/borg-infer",
  "crates/borg-llm",
  "crates/borg-memory",
  "crates/borg-ports",
  "crates/borg-ports-tools",
  "crates/borg-codemode",
  "crates/borg-shellmode",
  "crates/borg-fs",
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "7", features = ["chrono"] }
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
deno_core = "0.311"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }
dotenvy = "0.15"
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
teloxide = "0.17"
serenity = "0.12"
serial_test = "3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
testcontainers = "0.27.1"
indradb = { package = "indradb-lib", version = "5.0.0", features = ["rocksdb-datastore"] }
tantivy = "0.22"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"
