[workspace]
members = [
  "crates/borg-agent",
  "crates/borg-evals",
  "crates/borg-macros",
  "crates/borg-llm", 
  "crates/cargo-evals", 
  "crates/test-agents",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono"] }
async-trait = "0"
axum = { version = "0", features = ["json"] }
base64 = "0"
chrono = { version = "0", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
config = "0"
deno_core = "0"
derive_builder = "0"
dotenvy = "0"
futures-util = "0"
hex = "0"
infer = "0"
insta = "1"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
prettyplease = "0"
proc-macro2 = "1"
quote = "1"
reqwest = { version = "0", default-features = false, features = ["json", "multipart", "rustls-tls"] }
reqwest-eventsource = "0"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serenity = "0"
serial_test = "3"
sha2 = "0"
sqlx = { version = "0", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
swift-rs = "1"
syn = { version = "2", features = ["full"] }
tantivy = "0"
teloxide = "0"
tempfile = "3"
testcontainers = "0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
toml = "1"
tower = "0"
tower-http = { version = "0", features = ["cors", "trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2"
