[package]
name = "borg-gql"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-exec = { path = "../borg-exec" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-ports = { path = "../borg-ports" }
borg-taskgraph = { path = "../borg-taskgraph" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true

[dev-dependencies]
uuid.workspace = true
tower = { workspace = true, features = ["util"] }
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
borg-fs = { path = "../borg-fs" }
http = "1"

[build-dependencies]
anyhow.workspace = true
async-graphql.workspace = true
base64.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-exec = { path = "../borg-exec" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-taskgraph = { path = "../borg-taskgraph" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
