[package]
name = "borg-ports-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
serde = { workspace = true, features = ["derive"] }
