[package]
name = "agents-codemode"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embeddable code search and execution tools for agents"

[dependencies]
async-trait.workspace = true
deno_core.workspace = true
deno_error = "0.7.1"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agents = { path = "../agents" }
