[package]
name = "agents-proc-macros"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for typed agents and tool enums"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
agents = { path = "../agents" }
anyhow.workspace = true
async-trait.workspace = true
insta.workspace = true
prettyplease.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
