[package]
name = "agents-proc-macros"
version = "0.3.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for typed agents and type-safe tool calls"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["ai", "agents", "evals"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
agents = { path = "../agents", version = "0" }
anyhow.workspace = true
async-trait.workspace = true
insta.workspace = true
prettyplease.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
