[package]
name = "agents-test"
version = "0.3.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test helpers and provider fixtures for agents"
categories = ["development-tools::testing"]
keywords = ["ai", "agents", "evals"]
readme = "README.md"

[dependencies]
agents = { path = "../agents", package = "agents", version = "0" }
dotenvy.workspace = true
reqwest.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tokio.workspace = true
tracing.workspace = true
