[package]
name = "agents"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Facade crate for building typed Rust agents"
readme = "README.md"

[dependencies]
agents-macros = { path = "../agents-macros", package = "agents-macros", version = "=0.0.1"}
async-trait.workspace = true
derive_builder.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
infer.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
anyhow.workspace = true
agents-test = { path = "../agents-test" }
serial_test.workspace = true
testcontainers.workspace = true
