[package]
name = "agents"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Facade crate for building typed Rust agents"
readme = "README.md"

[features]
default = ["apple"]
apple = ["dep:swift-rs"]
live-provider-tests = []

[dependencies]
agents-macros = { path = "../agents-macros", package = "agents-macros", version = "0"}
async-trait.workspace = true
derive_builder.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
infer.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-eventsource.workspace = true
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time", "io-util", "sync"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
worker = "0"

[build-dependencies]
swift-rs = { workspace = true, features = ["build"], optional = true }

[dev-dependencies]
anyhow.workspace = true
agents-test = { path = "../agents-test" }
serial_test.workspace = true
testcontainers.workspace = true
