[package]
name = "borg-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
borg-llm = { path = "../borg-llm" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serial_test.workspace = true
