[package]
name = "borg-agent"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait.workspace = true
borg-llm = { path = "../borg-llm", package = "borg-llm", version = "0" }
borg-macros = { path = "../borg-macros", package = "borg-macros", version = "0" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serial_test.workspace = true
