[package]
name = "borg-agent"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed Rust agent runtime with sessions, tools, and turn-based execution"
readme = "README.md"

[dependencies]
async-trait.workspace = true
borg-llm = { path = "../borg-llm", package = "borg-llm", version = "=0.0.1" }
agents-macros = { path = "../agents-macros", package = "agents-macros", version = "=0.0.1" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
agents = { path = "../agents" }
anyhow.workspace = true
serial_test.workspace = true
