[package]
name = "borg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
borg-db = { path = "../borg-db" }
borg-core = { path = "../borg-core" }
borg-exec = { path = "../borg-exec" }
borg-ltm = { path = "../borg-ltm" }
borg-ports = { path = "../borg-ports" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
borg-rt = { path = "../borg-rt" }
tower.workspace = true
