[package]
name = "borg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
borg-db = { path = "../borg-db" }
borg-core = { path = "../borg-core" }
borg-exec = { path = "../borg-exec" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-ports = { path = "../borg-ports" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
reqwest.workspace = true

[dev-dependencies]
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
tower.workspace = true
