[package]
name = "borg-api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
borg-db = { path = "../borg-db" }
borg-core = { path = "../borg-core" }
borg-apps = { path = "../borg-apps" }
borg-exec = { path = "../borg-exec" }
borg-fs = { path = "../borg-fs" }
borg-gql = { path = "../borg-gql" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-taskgraph = { path = "../borg-taskgraph" }
borg-ports = { path = "../borg-ports" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
reqwest.workspace = true
include_dir = "0.7"

[dev-dependencies]
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
tower.workspace = true
