[package]
name = "borg-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-agent = { path = "../borg-agent" }
borg-codemode = { path = "../borg-codemode" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-memory = { path = "../borg-memory" }
