[package]
name = "borg-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
borg-agent = { path = "../borg-agent" }
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-memory = { path = "../borg-memory" }
borg-taskgraph = { path = "../borg-taskgraph" }
oauth2.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
