[package]
name = "borg-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "borg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
borg-api = { path = "../borg-api" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-exec = { path = "../borg-exec" }
borg-ltm = { path = "../borg-ltm" }
borg-onboard = { path = "../borg-onboard" }
borg-rt = { path = "../borg-rt" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
