[package]
name = "borg-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "borg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
borg-api = { path = "../borg-api" }
borg-agent = { path = "../borg-agent" }
borg-apps = { path = "../borg-apps" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-exec = { path = "../borg-exec" }
borg-fs = { path = "../borg-fs" }
borg-memory = { path = "../borg-memory" }
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
borg-taskgraph = { path = "../borg-taskgraph" }
clap.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dotenvy.workspace = true
