[package]
name = "borg-evals"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borg-agent = { path = "../borg-agent" }
borg-macros = { path = "../borg-macros" }
borg-llm = { path = "../borg-llm" }
chrono.workspace = true
config.workspace = true
indicatif.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true
