[package]
name = "borg-evals"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borg-agent = { path = "../borg-agent", package = "borg-agent", version = "0" }
borg-llm = { path = "../borg-llm", package = "borg-llm", version = "0" }
borg-macros = { path = "../borg-macros" , package = "borg-macros", version = "0" }
chrono.workspace = true
config.workspace = true
crossterm.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
ratatui.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
