[package]
name = "borg-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-core = { path = "../borg-core" }
borg-agent = { path = "../borg-agent" }
borg-db = { path = "../borg-db" }
borg-llm = { path = "../borg-llm" }
borg-ltm = { path = "../borg-ltm" }
borg-rt = { path = "../borg-rt" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio.workspace = true
