[package]
name = "borg-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-core = { path = "../borg-core" }
borg-agent = { path = "../borg-agent" }
borg-db = { path = "../borg-db" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-codemode = { path = "../borg-codemode" }
borg-apps = { path = "../borg-apps" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
