[package]
name = "borg-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-core = { path = "../borg-core" }
borg-agent = { path = "../borg-agent" }
borg-db = { path = "../borg-db" }
borg-llm = { path = "../borg-llm" }
borg-memory = { path = "../borg-memory" }
borg-codemode = { path = "../borg-codemode" }
borg-shellmode = { path = "../borg-shellmode" }
borg-fs = { path = "../borg-fs" }
borg-apps = { path = "../borg-apps" }
borg-taskgraph = { path = "../borg-taskgraph" }
borg-schedule = { path = "../borg-schedule" }
borg-ports-tools = { path = "../borg-ports-tools" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
sqlx.workspace = true
