[package]
name = "borg-gql"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
base64.workspace = true
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-memory = { path = "../borg-memory" }
borg-taskgraph = { path = "../borg-taskgraph" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
async-graphql.workspace = true
base64.workspace = true
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
borg-memory = { path = "../borg-memory" }
borg-taskgraph = { path = "../borg-taskgraph" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
