[package]
name = "borg-infer"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
llama-cpp-2 = { version = "0.1.137" }
encoding_rs = { version = "0.8" }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
