[package]
name = "borg-infer"
version = "0.1.0"
edition = "2024"

[features]
default = []
llama-cpp = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
llama-cpp-2 = { version = "0.1.137", optional = true }
encoding_rs = { version = "0.8", optional = true }
