[package]
name = "borg-llm"
version = "0.0.1"
edition = "2024"

[dependencies]
async-trait.workspace = true
derive_builder.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
infer.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
cargo-husky = "1.5.0"
serial_test.workspace = true
