[package]
name = "borg-llm"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed LLM provider runtime with structured completions, tools, and transcripts"
readme = "README.md"

[dependencies]
async-trait.workspace = true
derive_builder.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
infer.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
schemars.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
anyhow.workspace = true
cargo-husky.workspace = true
serial_test.workspace = true
