[package]
name = "borg-ltm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
indradb = { package = "indradb-lib", version = "5.0.0", features = ["rocksdb-datastore"] }
turso.workspace = true
tokio = { workspace = true, features = ["sync"] }
tantivy = "0.22"
url = { version = "2", features = ["serde"] }
