[package]
name = "agents-macros"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for typed agents, tools, suites, evals, and reusable graders"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
agents = { path = "../agents" }
anyhow.workspace = true
insta.workspace = true
prettyplease.workspace = true
serde_json.workspace = true
