[package]
name = "borg-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
indradb.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["sync"] }
tantivy.workspace = true
url.workspace = true
