[package]
name = "borg-ports"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
borg-db = { path = "../borg-db" }
borg-exec = { path = "../borg-exec" }
borg-ltm = { path = "../borg-ltm" }
borg-ui = { path = "../borg-ui" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
