[package]
name = "borg-ports"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borg-exec = { path = "../borg-exec" }
borg-core = { path = "../borg-core" }
borg-cmd = { path = "../borg-cmd" }
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
