[package]
name = "borg-rt"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
deno_core.workspace = true
serde_json.workspace = true
borg-core = { path = "../borg-core" }
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
borg-agent = { path = "../borg-agent" }
tokio.workspace = true
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
