[package]
name = "borg-taskgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-agent = { path = "../borg-agent" }
borg-core = { path = "../borg-core" }
borg-db = { path = "../borg-db" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
base64.workspace = true
