[package]
name = "cargo-evals"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
borg-llm = { path = "../borg-llm" }
clap.workspace = true
config.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true
