[package]
name = "cargo-evals"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cargo subcommand for listing and running typed agent eval suites"
readme = "README.md"

[dependencies]
anyhow.workspace = true
evals = { path = "../evals", package = "evals", version = "=0.0.1" }
clap.workspace = true
tokio.workspace = true
