[package]
name = "codemode"
version = "0.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Embeddable code search and execution tools for agents"
readme = "README.md"

[dependencies]
async-trait.workspace = true
deno_core.workspace = true
deno_error.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agents = { package = "agents", version = "0", path = "../agents" }
