[package]
name = "evals-macros"
version = "0.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for eval suites, eval definitions, and reusable graders"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
humantime.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
anyhow.workspace = true
evals = { path = "../evals", package = "evals" }
insta.workspace = true
prettyplease.workspace = true
serde_json.workspace = true
