[package]
name = "evals-macros"
version = "0.3.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for eval suites, eval definitions, and reusable graders"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["ai", "agents", "evals"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
humantime.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
anyhow.workspace = true
evals.workspace = true
insta.workspace = true
prettyplease.workspace = true
serde_json.workspace = true
